# superparcels

./: .gitignore  CHANGELOG.md  README.html  README.md  README_Phase1.md  README_Phase2.html  README_Phase2.md  SuperParcel POC_ Final.md  cluster_parcels_dbscan.ipynb  data_clean.ipynb  data_clean.py  data_clean_poc.ipynb  env.yaml  parcel_adj_poc.ipynb  parcel_cluster_mre.ipynb  parcel_encolsed_tess_wstreets_poc.ipynb  pyproject.toml  release.py
analysis/: dt_comparison.ipynb
clustering/: cluster_parcels_dbscan-alphashape.ipynb  cluster_parcels_dbscan-dmatrix-rbuff-KNN.ipynb  cluster_parcels_dbscan-dmatrix-rbuff-KNN.py  cluster_parcels_dbscan-dmatrix-rbuff.ipynb  cluster_parcels_dbscan-dmatrix-rbuff.py  cluster_parcels_dbscan-dmatrix.py  cluster_parcels_dbscan.ipynb  data_clean.ipynb  k_nearest_neighbor_plot.ipynb  parcel_cluster_mre_alphashape.ipynb  parcel_cluster_mre_dmatrix.ipynb
clustering/KNN_optimaldistance/: cluster_parcels_dbscan-dmatrix-rbuff-KNN.ipynb
clustering/dt-analysis/: dt_comparison.ipynb
clustering/mre/: geometry.py  multistep_eps.html  multistep_eps.ipynb  parcel_cluster_mre.ipynb  parcel_cluster_mre_dmatrix.ipynb  phase2_cluster_mre.html  phase2_cluster_mre.ipynb  phase2_cluster_subregion_dcalc.html  phase2_cluster_subregion_dcalc.ipynb  phase2_cluster_subregion_dcalc_alldist.ipynb  phase2_cluster_voronoi.ipynb  remove_overlaps.html  remove_overlaps.ipynb
clustering/phase1/: cluster_parcels_dbscan-dmatrix-rbuff.py
docs/: README_Phase2Analysis.md
src/: build.py  cli.py  config.json  dt_comparison.ipynb  helper.py  main_sp_fixed.py  phase2.py  setup.py  sp.py  sp_build.py  sp_cmds.py
voronoi_diagram/: parcel_adj_mre.ipynb
(+34 files in other folders)
