[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superparcels"
version = "0.2.0"
requires-python = ">=3.11"
description = "CLI tool for SuperParcel Library"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Austin Breunig", email = "abreunig@corelogic.com"}]
dependencies = [
    "click",
    "geopandas",
    "scipy",
    "scikit-learn",
    "google-cloud",
    "google-cloud-storage",
    "google-cloud-bigquery",
    "pyarrow",
    "db-dtypes",
    "platformdirs"
]

[project.scripts]
sps = "sp_cli.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"} 

[tool.setuptools.packages.find]
where = ["src"]
include = ["sp_geoprocessing", "bigq", "sp_cli"]

[project.optional-dependencies]
dev = ["pytest", "tomlkit", "build"]
